# smartTrain

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .env.example  test_circuit_breaker.py  test_multi_level_cache.py  test_retry.py
backend/app/: __init__.py  circuit_breaker_manager.py  config.py
backend/app/Client/: MyMCPClient.py
backend/app/LLM/: __init__.py  llm.py
backend/app/Utils/: __init__.py  base.py  registry.py  utils.py
backend/app/agent/: plans_agent.py  simple_agent.py
backend/app/api/: main.py
backend/app/api/router/: cache_warmup.py  circuit_breaker.py  map.py  poi.py  trip.py
backend/app/cache/: __init__.py  cache_warmup.py  llm_cache.py  lru_cache.py  poi_cache.py  redis_manager.py  weather_cache.py
backend/app/mcp/: __init__.py  base.py  mcp_wrapper_tool.py  protocol_tool.py
backend/app/models/: schemas.py
backend/app/services/: amap_service.py  llm_service.py  unsplash_service.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/views/: Home.vue  Result.vue
