[project]
name = "smarttrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "tool>=0.8.0",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
